# ProofOfDevice

./: .gitignore  Cargo.toml  Makefile  README.md  README.rst
assets/: pod_app.json
client/pod_app/: pod_app.h
client/pod_library/: pod_sgx.c
crates/api/src/: c.rs  lib.rs  wrappers.rs
crates/c-api/: Makefile  README.rst
crates/c-api/pod-enclave/: Makefile  pod_enclave.c
crates/c-api/pod-lib/: Makefile  pod_log.c  pod_log.h  pod_sgx.c  pod_sgx.h
crates/rust-sgx-util/: README.md
crates/rust-sgx-util/examples/: ias_verify_quote.rs
crates/server/: .gitignore  Cargo.toml
crates/server/examples/: test_client.rs
crates/server/src/: schema.rs
lib/api/: Cargo.toml  README.md
lib/api/src/: lib.rs  wrappers.rs
lib/c-api/: Makefile
lib/rust-sgx-util/: Cargo.toml  README.md
lib/rust-sgx-util/src/: ias.rs  lib.rs  ser_de.rs
pod-app/: .gitignore  Cargo.toml  README.md  build.rs  install.sh
pod-app/assets/: pod_app.json
pod-app/examples/: webservice_client.rs
pod-app/src/: main.rs  messages.rs
pod-client/: README.rst  ed_verify.py
pod-client/pod_app/: Makefile  pod_app.c  pod_app.h
pod-client/pod_enclave/: Makefile  pod_enclave.h
pod-client/pod_library/: Makefile  pod_sgx.c  pod_sgx.h
pod-enclave/: .gitignore  README.rst  pod_enclave.edl
pod-ext/: README.md  background.js  frontend.js  manifest.json
pod-ext/js/: check-browser.js  constants.js  promisify.js
pod-ext/pages/: settings.css  settings.html  settings.js
pod-ext/popup/: popup.css  popup.html  popup.js
pod-ext/style/: main.css  montserrat-font.css
pod-node/: .gitignore  README.md  binding.gyp  module.js  package.json
pod-node/src/: module.c
pod-server/: .gitignore  Cargo.toml  README.md
pod-server/crates/rust-sgx-util/: Cargo.toml  README.md
pod-server/crates/rust-sgx-util/src/: ias.rs  lib.rs  ser_de.rs
pod-server/examples/: test_client.rs
pod-server/migrations/2020-04-09-130041_create_users/: up.sql
pod-server/src/: entrypoints.rs  error.rs  main.rs  models.rs
pod-server/src/handlers/: auth.rs  mod.rs  register.rs
pod-web/: README.md  package-lock.json  package.json
pod-web/public/: manifest.json
pod-web/src/: App.css  App.js  Constants.js  Router.js  _vars.css  index.css  index.js
pod-web/src/components/HOC/: Loader.js  loader.module.css
pod-web/src/components/Header/: header.module.css  index.js
pod-web/src/components/Home/: home.module.css  index.js
pod-web/src/components/Login/: index.js  login.module.css
pod-web/src/components/PodIndicator/: index.js  pod.module.css
pod-web/src/components/Register/: index.js  register.module.css
pod-web/src/context/: auth.js
pod-web/src/hooks/: useEventListener.js
pod-web/src/provider/: authProvider.js
pod-web/src/utils/: request.js
pod_app/: .gitignore  Makefile  pod_app.c
pod_enclave/: Makefile  openssl_parse.awk  pod_enclave.c  pod_enclave.config.xml  pod_enclave.edl  pod_enclave.h
pod_library/: pod_sgx.h
server/: Cargo.toml
server/crates/rust-sgx-util/: Cargo.toml  README.md
server/crates/rust-sgx-util/examples/: get_sigrl.rs  ias_get_sigrl.rs
server/crates/rust-sgx-util/src/: c.rs  ias.rs  lib.rs
src/: main.rs
