[package]
name = "pod-app"
version = "0.1.0"
authors = ["Jakub Konka <jakub.konka@golem.network>"]
edition = "2018"

[dependencies]
pod-api = { path = "../lib/api", version = "0.1.0" }
rust-sgx-util = { path = "../lib/rust-sgx-util", features = ["with_serde"], version = "0.2.3" }
anyhow = "1"
thiserror = "1"
base64 = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
nix = "0.17"
libc = "0.2"
xdg = "2"
toml = "0.5"

[dev-dependencies]
actix-web = "2"
actix-rt = "1"

[build-dependencies]
cc = "1"

[badges]
maintenance = { status = "actively-developed" }

