[package]
name = "pod-server"
version = "0.1.0"
authors = ["Jakub Konka <jakub.konka@golem.network>"]
edition = "2018"
license = "LGPL-3.0"
readme = "README.md"
repository = "https://github.com/golemfactory/proofofdevice"
homepage = "https://github.com/golemfactory/proofofdevice"
description = "An implementation of proof-of-device web server."

[dependencies]
actix-web = "2"
actix-rt = "1"
rust-sgx-util = { path = "crates/rust-sgx-util", features = ["serde"], version = "0.1.1" }
anyhow = "1"
serde = "1"
log = "0.4"
env_logger = "0.6"
structopt = "0.3"
toml = "0.5"

[badges]
maintenance = { status = "actively-developed" }

[workspace]
