[package]
name = "pod-server"
version = "0.1.0"
authors = ["Jakub Konka <jakub.konka@golem.network>"]
edition = "2018"
license = "LGPL-3.0"
readme = "README.md"
repository = "https://github.com/golemfactory/proofofdevice"
homepage = "https://github.com/golemfactory/proofofdevice"
description = "An implementation of proof-of-device web server."

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-session = "0.3"
actix-identity = "0.2"
rust-sgx-util = { path = "../rust-sgx-util", features = ["with_serde"], version = "0.2.3" }
anyhow = "1"
thiserror = "1"
serde = "1"
serde_json = "1"
log = "0.4"
pretty_env_logger = "0.4"
structopt = "0.3"
toml = "0.5"
diesel = { version = "1.0", features = ["sqlite"] }
tokio-diesel = "0.3"
dotenv = "0.9"
getrandom = "0.1"
base64 = "0.12"
ed25519-dalek = "1.0.0-pre.3"

[dev-dependencies]
pod-api = { path = "../api", version = "0.1.0" }

[badges]
maintenance = { status = "actively-developed" }
