[package]
name = "pod-api"
version = "0.1.0"
authors = ["Jakub Konka <jakub.konka@golem.network>"]
edition = "2018"
license = "LGPL-3.0"
readme = "README.md"
repository = "https://github.com/golemfactory/proofofdevice"
homepage = "https://github.com/golemfactory/proofofdevice"
description = "Idiomatic Rust API for managing the pod-enclave."

[dependencies]
anyhow = "1"
libc = "0.2"
rust-sgx-util = { path = "../rust-sgx-util", version = "0.2.3"}

[badges]
maintenance = { status = "actively-developed" }
